vehicle/tests/golden/error/dataset/tooBigIndex/tooBigIndex.vcl
-- Test provide a reference to a dataset with number >= 3 in it.
@dataset
trainingDataset : Vector (Index 3) 4
